--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -86,4 +87,7 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:2.2.5"
     kapt  "androidx.room:room-compiler:2.2.5"
+
+    //View Pager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
