save to favorites, recent

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,5 @@ dependencies {
 
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.cardview:cardview:1.0.0"
 }
