--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.cardview:cardview:1.0.0"
+
+    //YouTube
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 }
