--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.4.0"
 
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -94,4 +93,7 @@ dependencies {
 
     //YouTube
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
+
+    //Google Map
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
