--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -83,8 +84,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Room
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt  "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.6"
+    kapt  "androidx.room:room-compiler:2.2.6"
 
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
@@ -96,5 +97,9 @@ dependencies {
     //Google Map
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
+    //Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Pie Chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
